--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ jumbotron effects
 }
 
 .noUi-horizontal .noUi-handle .noUi-vertical .noUi-handle {
-    background: #007bffc4;
+
     width: 1px;
     height: 1px;
     left: 6px;
@@ -73,6 +73,8 @@ jumbotron effects
     background-color: transparent;
     border: transparent;
     display: none;
+    color: #fafafa;
+    background: #007bff;
 }
 
 .noUi-target.noUi-horizontal .noUi-active .noUi-tooltip {
