--- a/src/styles.css
+++ b/src/styles.css
@@ -57,7 +57,7 @@ jumbotron effects
 /**** Custom styles for noUiSlider ****/
 
 .noUi-horizontal .noUi-connect {
-    background: #007bff;
+    background: #fafafa;
 }
 
 .noUi-horizontal .noUi-handle .noUi-vertical .noUi-handle {
